Support for external resources in -Dbrowser.rootdir or next to the main JAR's location